[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/Seleccionar.gd" type="Script" id=1]

[node name="Seleccionar" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 584.0
color = Color( 0.615686, 0.921569, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cliente" type="Button" parent="."]
margin_left = 54.3636
margin_top = 234.679
margin_right = 984.364
margin_bottom = 315.679
text = "Cliente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditSERVER_IP" type="TextEdit" parent="Cliente"]
margin_left = 1.31824
margin_top = -80.4962
margin_right = 308.318
margin_bottom = -18.4962
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSERVER_IP" type="Label" parent="Cliente"]
margin_left = 6.72711
margin_top = -128.816
margin_right = 303.727
margin_bottom = -69.816
custom_colors/font_color = Color( 0.917647, 0.121569, 0.121569, 1 )
text = "SERVER_IP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditSERVER_PORT" type="TextEdit" parent="Cliente"]
margin_left = 618.536
margin_top = -77.1326
margin_right = 925.536
margin_bottom = -15.1326
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSERVER_PORT" type="Label" parent="Cliente"]
margin_left = 622.263
margin_top = -127.134
margin_right = 919.263
margin_bottom = -68.134
custom_colors/font_color = Color( 0.917647, 0.121569, 0.121569, 1 )
text = "SERVER_PORT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server" type="Button" parent="."]
margin_left = 57.7272
margin_top = 476.903
margin_right = 987.727
margin_bottom = 557.903
text = "Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditSERVER_PORT" type="TextEdit" parent="Server"]
margin_left = 1.31824
margin_top = -76.4962
margin_right = 308.318
margin_bottom = -14.4962
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSERVER_PORT" type="Label" parent="Server"]
margin_left = 6.72711
margin_top = -139.497
margin_right = 303.727
margin_bottom = -80.497
custom_colors/font_color = Color( 0.917647, 0.121569, 0.121569, 1 )
text = "SERVER_PORT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelResult" type="Label" parent="."]
margin_left = 32.0
margin_top = 25.0
margin_right = 1001.0
margin_bottom = 105.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Cliente" to="." method="_on_Cliente_pressed"]
[connection signal="pressed" from="Server" to="." method="_on_Server_pressed"]
